--- a/src/assets/css/_variables.less
+++ b/src/assets/css/_variables.less
@@ -8,9 +8,9 @@
 @c_font_main: #3a3838; // 常规字体颜色
 @c_font_sec: #8a8686; // 辅助字体颜色
 @c_font_place: #8a8686; // 占位颜色
-@c_bor_base: #dddddd; // 边框
+@c_bor_base: #ddd; // 边框
 @c_bor_bor_light: #e2e2e2; // 亮边框
-@c_bor_bor_lighter: #eeeeee; // 更亮的边框
+@c_bor_bor_lighter: #eee; // 更亮的边框
 @c_bor_bor_lightest: #f2f2f2; // 超亮边框
 @c_white: #fff; // 白色
 @c_black: #393d49; // 黑色背景
@@ -32,156 +32,156 @@
 @e_active_opacity: .75; //一般元素 :active 时的透明度
 
 .l_pre(@style, @value) {
-    //为 animation, transform, transition 添加前缀
-    //----- 示例 -----
-    //.l_pre(transition, all 1s linear 0s);
-    -webkit-@{style}: @value;
-    -moz-@{style}: @value;
-    -ms-@{style}: @value;
-        @{style}: @value;
+	//为 animation, transform, transition 添加前缀
+	//----- 示例 -----
+	//.l_pre(transition, all 1s linear 0s);
+	-webkit-@{style}: @value;
+	-moz-@{style}: @value;
+	-ms-@{style}: @value;
+		@{style}: @value;
 }
 
 .l_keyframes(@name, @content) {
 
-    //----- 示例 -----
-    //.l_keyframes(aniName, { from{ opacity: 1;} to{ opacity: 0;} });
-    @-webkit-keyframes @name {
-        @content();
-    }
+	//----- 示例 -----
+	//.l_keyframes(aniName, { from{ opacity: 1;} to{ opacity: 0;} });
+	@-webkit-keyframes @name {
+		@content();
+	}
 
-    @-moz-keyframes @name {
-        @content();
-    }
+	@-moz-keyframes @name {
+		@content();
+	}
 
-    @-o-keyframes @name {
-        @content();
-    }
+	@-o-keyframes @name {
+		@content();
+	}
 
-    @-ms-keyframes @name {
-        @content();
-    }
+	@-ms-keyframes @name {
+		@content();
+	}
 
-    @keyframes @name {
-        @content();
-    }
+	@keyframes @name {
+		@content();
+	}
 }
 
 //清除浮动
 .l_clear() {
 
-    //----- 示例 -----
-    //.l_clear()
-    //overflow: hidden;
-    &:after {
-        content: "";
-        display: block;
-        height: 0;
-        clear: both;
-    }
+	//----- 示例 -----
+	//.l_clear()
+	//overflow: hidden;
+	&:after {
+		content: "";
+		display: block;
+		height: 0;
+		clear: both;
+	}
 }
 
 .l_nowrap() {
-    //禁止换行
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    /* 省略号 */
-    word-break: normal;
-    /* 防止被父级 wordwrap 样式影响 */
-    word-wrap: normal;
+	//禁止换行
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	/* 省略号 */
+	word-break: normal;
+	/* 防止被父级 wordwrap 样式影响 */
+	word-wrap: normal;
 }
 
 .l_wordwrap() {
-    //强制换行
-    white-space: normal;
-    word-break: break-all;
-    /*支持IE，chrome，FF不支持*/
-    word-wrap: break-word;
-    /*支持IE，chrome，FF*/
+	//强制换行
+	white-space: normal;
+	word-break: break-all;
+	/*支持IE，chrome，FF不支持*/
+	word-wrap: break-word;
+	/*支持IE，chrome，FF*/
 }
 
 .l_noselect() {
-    //禁止选中
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	//禁止选中
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 //placeholder 颜色
 .l_placeholder(@color: #ccc) {
 
-    //----- 示例 -----
-    //input{
-    //    .l_placeholder(#fff);
-    //}
-    //WebKit browsers
-    &::-webkit-input-placeholder {
-        color: @color;
-    }
+	//----- 示例 -----
+	//input{
+	//    .l_placeholder(#fff);
+	//}
+	//WebKit browsers
+	&::-webkit-input-placeholder {
+		color: @color;
+	}
 
-    //Mozilla Firefox 19+
-    &::-moz-placeholder {
-        color: @color;
-    }
+	//Mozilla Firefox 19+
+	&::-moz-placeholder {
+		color: @color;
+	}
 
-    //Internet Explorer 10+
-    &:-ms-input-placeholder {
-        color: @color;
-    }
+	//Internet Explorer 10+
+	&:-ms-input-placeholder {
+		color: @color;
+	}
 }
 
 //取消下拉框默认样式
 .l_appearance_none() {
-    appearance: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
+	appearance: none;
+	-moz-appearance: none;
+	-webkit-appearance: none;
 
-    &::-ms-expand {
-        display: none;
-    }
+	&::-ms-expand {
+		display: none;
+	}
 }
 
 //隐藏滚动条
 .l_noscrollbar() {
-    scrollbar-width: none;
-    -ms-overflow-style: none;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
 
-    &::-webkit-scrollbar {
-        display: none;
-    }
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 //超过@line行文字隐藏
 .l_clamp(@line: 1) {
-    display: -webkit-box;
-    overflow: hidden;
-    .l_wordwrap();
-    -webkit-line-clamp: @line;
-    -webkit-box-orient: vertical;
+	display: -webkit-box;
+	overflow: hidden;
+	.l_wordwrap();
+	-webkit-line-clamp: @line;
+	-webkit-box-orient: vertical;
 }
 
 //线性渐变
 .l_linear_gradient(@cstart, @cend, @endpoint: bottom) {
-    //----- 示例 -----
-    //.l_linear_gradient(#f00, #ff0, top);
-    //@endpoint 终点位置：top bottom
-    background-image: linear-gradient(to @endpoint, @cstart, @cend);
-    background-image: -ms-linear-gradient(to @endpoint, @cstart, @cend);
-    background-image: -moz-linear-gradient(to @endpoint, @cstart, @cend);
-    background-image: -webkit-linear-gradient(to @endpoint, @cstart, @cend);
-    background-image: -o-linear-gradient(to @endpoint, @cstart, @cend);
+	//----- 示例 -----
+	//.l_linear_gradient(#f00, #ff0, top);
+	//@endpoint 终点位置：top bottom
+	background-image: linear-gradient(to @endpoint, @cstart, @cend);
+	background-image: -ms-linear-gradient(to @endpoint, @cstart, @cend);
+	background-image: -moz-linear-gradient(to @endpoint, @cstart, @cend);
+	background-image: -webkit-linear-gradient(to @endpoint, @cstart, @cend);
+	background-image: -o-linear-gradient(to @endpoint, @cstart, @cend);
 }
 
 //径向渐变：position 为 center，shape 为 ellipse
 .l_radial_gradient(@cstart, @cend) {
-    //----- 示例 -----
-    //.l_radial_gradient(#f00, #ff0);
-    background-image: radial-gradient(@cstart, @cend);
-    background-image: -ms-radial-gradient(@cstart, @cend);
-    background-image: -moz-radial-gradient(@cstart, @cend);
-    background-image: -webkit-radial-gradient(@cstart, @cend);
-    background-image: -o-radial-gradient(@cstart, @cend);
+	//----- 示例 -----
+	//.l_radial_gradient(#f00, #ff0);
+	background-image: radial-gradient(@cstart, @cend);
+	background-image: -ms-radial-gradient(@cstart, @cend);
+	background-image: -moz-radial-gradient(@cstart, @cend);
+	background-image: -webkit-radial-gradient(@cstart, @cend);
+	background-image: -o-radial-gradient(@cstart, @cend);
 }
