--- a/src/assets/css/_variables.less
+++ b/src/assets/css/_variables.less
@@ -14,7 +14,7 @@
 @c_bor_bor_lightest: #f2f2f2; // 超亮边框
 @c_white: #fff; // 白色
 @c_black: #393d49; // 黑色背景
-@c_block: #f0f0f0; // 普通背景（不是白色）
+@c_block: #f5f7fa; // 普通背景（不是白色）
 
 
 //-- 尺寸(size)定义 @s_
