--- a/src/assets/css/_base.less
+++ b/src/assets/css/_base.less
@@ -36,7 +36,7 @@ span {
 	border: 0;
 	/* outline: none;*/
 	.l_pre(box-sizing, border-box);
-	.l_pre(user-select, none);
+	//.l_pre(user-select, none);
 }
 
 body,
@@ -44,7 +44,7 @@ button,
 input,
 select,
 textarea {
-	font: 14px/1.5 "\5FAE\8F6F\96C5\9ED1", arial, verdana, sans-serif;
+	font: 14px/1.5 "\5FAE\8F6F\96C5\9ED1", "PingFang SC", arial, verdana, sans-serif;
 	color: @c_font_main;
 }
 
