--- a/src/assets/css/_variables.less
+++ b/src/assets/css/_variables.less
@@ -1,20 +1,20 @@
 //-- 颜色(color)定义 @c_
-@c_main: #009688; //主色：标题、重要信息
-@c_success: #67c23a; //成功色
-@c_warn: #ffb800; // 警告色
-@c_danger: #ff5722; // 危险色 错误色
-@c_info: #909399; // 状态离线或者不可用
-@c_font: #030303; // 字体色
-@c_font_main: #3a3838; // 常规字体颜色
-@c_font_sec: #8a8686; // 辅助字体颜色
-@c_font_place: #8a8686; // 占位颜色
+@c_main: #007aff; //主色：标题、重要信息
+@c_success: #34c758; //成功色
+@c_warn: #ff9502; // 警告色
+@c_danger: #ff3a30; // 危险色 错误色
+@c_info: #a6aab8; // 状态离线或者不可用
+@c_font: #838a9d; // 字体色
+@c_font_main: #3c4353; // 常规字体颜色
+@c_font_sec: #a6aab8; // 辅助字体颜色
+@c_font_place: #e6e9ef; // 占位颜色
 @c_bor_base: #ddd; // 边框
 @c_bor_bor_light: #e2e2e2; // 亮边框
 @c_bor_bor_lighter: #eee; // 更亮的边框
 @c_bor_bor_lightest: #f2f2f2; // 超亮边框
 @c_white: #fff; // 白色
 @c_black: #393d49; // 黑色背景
-@c_block: #f5f7fa; // 普通背景（不是白色）
+@c_block: #f6f7f9; // 普通背景（不是白色）
 
 
 //-- 尺寸(size)定义 @s_
@@ -24,8 +24,8 @@
 @s_font: 14px; // 字体大小
 @s_font_small: 13px; // 小字号
 @s_font_smaller: 12px; // 超小字号
-@s_mg_h: 10px; // 水平边距
-@s_mg_v: 10px; // 竖直边距
+@s_mg_h: 8px; // 水平边距
+@s_mg_v: 8px; // 竖直边距
 
 
 //--  其他(else)定义 @e_
