--- a/src/assets/css/_base.less
+++ b/src/assets/css/_base.less
@@ -123,7 +123,12 @@ body {
 		align-items: center;
 	}
 
-	& + & {
+	&._flex0 {
+		flex: none;
+		flex-shrink: 0;
+	}
+
+	&._ml + &._ml {
 		margin-left: @s_mg_h;
 	}
 }
@@ -139,7 +144,7 @@ body {
 		align-items: center;
 	}
 
-	& + & {
+	&._mt + &._mt {
 		margin-top: @s_mg_v;
 	}
 }
