--- a/src/assets/css/views/error/index.less
+++ b/src/assets/css/views/error/index.less
@@ -25,7 +25,7 @@
 	justify-content: center;
 	width: 380px;
 	margin-left: 50px;
-	color: @c_main;
+	color: @c_font_main;
 	font-family: Roboto;
 	font-weight: 500;
 	font-size: 16px;
